feat: add binary font file support
- Add IndexedDB storage for custom font binaries (db.ts)
- Add FontSource type (system/custom union) and FontConfig interfaces
- Implement FontFace API integration for custom fonts (font-injector.ts)
- Add FontSlot and CustomFontUpload components for options page
- Write unit tests for font-injector module
- Update tasks.md to mark all items complete

close #2

--- a/packages/excali-local/entrypoints/options/style.css
+++ b/packages/excali-local/entrypoints/options/style.css
@@ -1,1 +1,28 @@
 @import "tailwindcss";
+
+@font-face {
+  font-family: "Excalifont";
+  src: url("editor/fonts/Excalifont/excalifont-Regular-a88b72a24fb54c9f94e3b5fdaa7481c9.woff2")
+    format("woff2");
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Nunito";
+  src: url("editor/fonts/Nunito/Nunito-Regular-XRXI3I6Li01BKofiOc5wtlZ2di8HDIkhdTA3j6zbXWjgevT5.woff2")
+    format("woff2");
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Comic Shanns";
+  src: url("editor/fonts/ComicShanns/ComicShanns-Regular-279a7b317d12eb88de06167bd672b4b4.woff2")
+    format("woff2");
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
